# PictureBeizer

./: CMakeLists.txt  main.cpp
src/: Curve.cpp  Curve.h  Helpers.cpp  Helpers.h  PictureReducer.cpp  PictureReducer.h
